--- a/public/sse.html
+++ b/public/sse.html
@@ -4,10 +4,25 @@
   <meta charset="utf-8" />
   <title>Log Viewer</title>
   <script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', function(e) {
+
     var source = new EventSource('/stream');
-    source.addEventListener('message', function(e) {
-      console.log(e.data);
+
+    source.addEventListener('log', function(e) {
+      console.dir(JSON.parse(e.data));
     }, false);
+
+    source.addEventListener('open', function(e) {
+      console.log('Opened connection');
+    }, false);
+
+    source.onerror = function(e) {
+      console.log(e);
+      //if (e.readyState == EventSource.CLOSED) {
+        this.close();
+      //}
+    }
+  }, false);
   </script>
 </head>
 <body>
