Better session handling
The browser supplies an appID. This will be unique to the instance,
i.e. different tabs/windows won’t have the same appID. The server
maintains the secret sessionID that’s shared across tabs/windows. The
combination of these provides uniqueness for multiple users, each with
potentially multiple tabs/windows.

--- a/public/sse.html
+++ b/public/sse.html
@@ -5,10 +5,10 @@
   <title>Log Viewer</title>
   <script type="text/javascript">
 (function() {
+  var appID = 'dummy';
   document.addEventListener('DOMContentLoaded', function(e) {
 
-
-    var source = new EventSource('/stream');
+    var source = new EventSource('/stream/' + appID);
 
     source.addEventListener('log', function(e) {
       var msg = JSON.parse(e.data);
