--- a/public/sse.html
+++ b/public/sse.html
@@ -3,17 +3,34 @@
 <head>
   <meta charset="utf-8" />
   <title>Log Viewer</title>
+  <script type="text/javascript" src="EventEmitter2.js"></script>
   <script type="text/javascript">
 (function() {
-  var appID = 'dummy';
-  document.addEventListener('DOMContentLoaded', function(e) {
-
-    var source = new EventSource('/stream/' + appID);
+  function LogApp() {
+    var guid = (function() {
+      function s4() {
+        return Math.floor((1 + Math.random()) * 0x10000).toString(16).substring(1);
+      }
+      return function() {
+        return s4() + s4() + '-' + s4() + '-' + s4() + '-' + s4() + '-' + s4() + s4() + s4();
+      };
+    })();
+  
+    this.id = guid();
+    this.messages = [];
+    this.query = '';
+  }
+  //LogApp.prototype = Object.clone(EventEmitter.prototype);
+  LogApp.prototype = Object.create(EventEmitter2.prototype);
+  LogApp.prototype.initializeStream = function(url) {
+    var that = this;
+    url = (url || '/stream/') + this.id;
+    var source = new EventSource(url);
 
     source.addEventListener('log', function(e) {
       var msg = JSON.parse(e.data);
-      console.dir(msg);
-      appendLog(msg);
+      //console.dir(msg);
+      that.emit('log:received', msg);
     }, false);
 
     source.addEventListener('open', function(e) {
@@ -22,15 +39,16 @@
 
     source.onerror = function(e) {
       console.dir(e);
-      //if (e.readyState == EventSource.CLOSED) {
-        this.close();
-      //}
+      this.close();
+      throw new Error();  
     }
-  }, false);
+  }
   
-  // FIXME: Need a real view/templating library, like React
-  // TODO: Need to figure out how to window so that old logs are purged
-  function appendLog(msg) {
+  /****************************************/
+  var app = new LogApp();
+  console.log('New app with id ' + app.id);
+  
+  app.on('log:received', function(msg) {
     var body = document.querySelector('table#Logs > tbody');
     var row = document.createElement('tr');
     var time = document.createElement('td'),
@@ -46,7 +64,11 @@
     row.appendChild(severity);
     row.appendChild(message);
     body.insertBefore(row, body.firstChild);
-  }
+  });
+
+  document.addEventListener('DOMContentLoaded', function(e) {
+    app.initializeStream();
+  }, false);
 })();
   </script>
   <style type="text/css">
