--- a/public/sse.html
+++ b/public/sse.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="array-proxy.js"></script>
   <!-- <script src="http://fb.me/react-0.12.2.js"></script> -->
   <!-- <script src="http://fb.me/JSXTransformer-0.12.2.js"></script> -->
+  <script type="text/javascript" src="lib/moment.js"></script>
   <script type="text/javascript">
 (function() {
   function LogApp() {
@@ -58,10 +59,12 @@
         maxLength, // start
         arr.length - (Math.min(maxLength, arr.length) - 1) // number to delete
       );
+      // Need to sort in the case where delivery is delayed. 
+      // Message timestamps will still reflect the original log time.
       Array.prototype.sort.call(arr, function(a, b) {
         var a = new Date(a.time);
         var b = new Date(b.time);
-        
+        // Reverse order
         return b - a;
       });
       return arr;        
@@ -177,27 +180,46 @@
     body = document.createElement('tbody');
     for(var i = 0; i < msgs.length; i++) {
       var msg = msgs[i];
-      body.appendChild(renderRow(msg));
+      body.appendChild(renderRow(msg, msgs[i + 1]));
     }
     table.appendChild(body);
     
-    function renderRow(msg) {
+    function renderRow(msg, nextMsg) {
+      var TIMESTAMP = 'HH:mm:ss, YYYY-MM-DD';
       var row = document.createElement('tr');
       var time = document.createElement('td'),
+          diff = document.createElement('td'),
           sender = document.createElement('td'),
           host = document.createElement('td'),
           severity = document.createElement('td'),
           message = document.createElement('td');
       if(msg.severity) { severity.classList.add('severity', msg.severity.toLowerCase()); }
-      //severity.appendChild(document.createTextNode(msg.severity));
+      severity.appendChild(document.createTextNode(msg.severity));
       severity.setAttribute('data-severity', msg.severity);
-      time.appendChild(document.createTextNode(msg.time));
-      time.setAttribute('data-time', msg.time);
+      severity.setAttribute('title', msg.severity);
+      var currentTime = moment(msg.time);
+      var diffStr = '';
+      if(nextMsg && nextMsg.time) {
+        diffStr = moment.duration(
+          currentTime.diff(
+            moment(nextMsg.time)
+          )
+        ).asSeconds() + '';
+      }
+      diff.appendChild(document.createTextNode(diffStr));
+      diff.classList.add('diff');
+      time.appendChild(document.createTextNode(currentTime.format(TIMESTAMP))); // .SSS for fractional seconds
+      time.setAttribute('data-time', currentTime.format());
+      time.classList.add('time');
       sender.appendChild(document.createTextNode(msg.sender));
+      sender.classList.add('sender');
       host.appendChild(document.createTextNode(msg.host));
+      host.classList.add('host');
       message.appendChild(document.createTextNode(msg.message));
+      message.classList.add('message');
       row.appendChild(severity);
       row.appendChild(time);
+      row.appendChild(diff);
       row.appendChild(sender);
       row.appendChild(host);
       row.appendChild(message);
@@ -225,16 +247,51 @@ table#Logs {
   width: 100%;
   border-collapse: collapse;
 }
+col.severity {
+  width: 0.65em;
+}
+col.time {
+  width: 11.5em;
+}
+col.diff {
+  width: 4em;
+}
+col.sender {
+  width: 7em;
+}
+col.host {
+  width: 10em;
+}
+col.message {}
 td, th {
   text-align: left;
   padding: 0.25rem 0.5rem;
   border: solid 1px #ccc;
+  vertical-align: bottom;
 }
-col.severity {
-  width: 2px;
+th {
+  vertical-align: top;
 }
+td {
+  font-family: Inconsolata, Consolas, mono-space;
+}
+td.severity, th.severity {
+  padding: 0;
+  text-indent: -1000em;
+}
+th.severity {
+  background-color: #dcdcdc;
+}
+th .key {
+  font-size: 75%;
+  font-weight: lighter;
+}
+td.message {}
 .severity.emergency {
   background-color: #43000C;
+}
+td.time, td.diff {
+  text-align: right;
 }
 .severity.alert {
   background-color: #720013;
@@ -281,17 +338,19 @@ col.severity {
     <colgroup>
       <col class="severity"/>
       <col class="time"/>
+      <col class="diff"/>
       <col class="sender"/>
       <col class="host"/>
       <col class="message"/>
     </colgroup>
     <thead>
       <tr>
-        <th class="">&nbsp;</th>
-        <th class="">Time</th>
-        <th class="">Sender</th>
-        <th class="">Host</th>
-        <th class="">Message</th>
+        <th class="severity"></th>
+        <th class="time">Time <div class="key">h:m:s, y-m-d</div></th>
+        <th class="diff">Diff  <div class="key">seconds</th>
+        <th class="sender">Sender</th>
+        <th class="host">Host</th>
+        <th class="message">Message</th>
       </tr>
     </thead>
     <tbody>
