Extracted CSS and got message overflow working

--- a/public/sse.html
+++ b/public/sse.html
@@ -238,95 +238,7 @@
   }, false);
 })();
   </script>
-  <style type="text/css">
-body {
-  font-family: Helvetica, sans-serif;
-  padding: 2em 1em;
-}
-table#Logs {
-  width: 100%;
-  border-collapse: collapse;
-}
-col.severity {
-  width: 0.65em;
-}
-col.time {
-  width: 11.5em;
-}
-col.diff {
-  width: 4em;
-}
-col.sender {
-  width: 7em;
-}
-col.host {
-  width: 10em;
-}
-col.message {}
-td, th {
-  text-align: left;
-  padding: 0.25rem 0.5rem;
-  border: solid 1px #ccc;
-  vertical-align: bottom;
-}
-th {
-  vertical-align: top;
-}
-td {
-  font-family: Inconsolata, Consolas, mono-space;
-}
-td.severity, th.severity {
-  padding: 0;
-  text-indent: -1000em;
-}
-th.severity {
-  background-color: #dcdcdc;
-}
-th .key {
-  font-size: 75%;
-  font-weight: lighter;
-}
-td.message {}
-.severity.emergency {
-  background-color: #43000C;
-}
-td.time, td.diff {
-  text-align: right;
-}
-.severity.alert {
-  background-color: #720013;
-}
-.severity.critical {
-  background-color: #9B001C;
-}
-.severity.error {
-  background-color: #CF0638;
-}
-.severity.warning {
-  background-color: #FA6632;
-}
-.severity.notice {
-  background-color: #0A6789;
-}
-.severity.info {
-  background-color: #0A6789;
-}
-.severity.config {
-  background-color: #FECD23;
-}
-.severity.debug {
-  background-color: #0A996F;
-}
-.severity.fine {
-  background-color: #DEE7E7;
-}
-.severity.finer {
-  background-color: #DEE7E7;
-}
-.severity.finest {
-  background-color: #DEE7E7;
-}
-  </style>
+  <link type="text/css" rel="stylesheet" href="app.css"></link>
 </head>
 <body>
   <form id="Search">
