--- a/public/sse.html
+++ b/public/sse.html
@@ -243,64 +243,69 @@
   <link type="text/css" rel="stylesheet" href="app.css"></link>
 </head>
 <body>
-  <form id="Search">
-    <div class="control search"><input type="text" name="q" /></div>
-    <div class="control submit"><button>Search</button></div>
-  </form>
-  <form id="Facets">
-    <div class="facet hosts">
-      <h3>Hosts</h3>
-      <ol>
-        <li><input type="checkbox"/> ex1.example.com (15,839)</li>
-        <li><input type="checkbox"/> qa.some-other.com (4,402)</li>
-        <li><input type="checkbox"/> ex2.example.com (189)</li>
-        <li><input type="checkbox"/> ex3.example.com (5)</li>
-        <li><input type="checkbox"/> ex4.example.com (0)</li>
-      </ol>
-    </div>
-    <div class="facet senders">
-      <h3>Sender</h3>
-      <ol>
-        <li><input type="checkbox"/> MarkLogic</li>
-        <li><input type="checkbox"/> Node.js</li>
-      </ol>
-    </div>
-    <div class="facet severities">
-      <h3>Severity</h3>
-      <ol>
-        <li><input type="checkbox"/> Critical</li>
-        <li><input type="checkbox"/> Alert</li>
-        <li><input type="checkbox"/> Error</li>
-        <li><input type="checkbox"/> Notice</li>
-        <li><input type="checkbox"/> Info</li>
-        <li><input type="checkbox"/> Debug</li>
-      </ol>
-    </div>
-    <!--<div class="facet date-range">
+  <header>
+    <form id="Search">
+      <div class="control search"><input type="text" name="q" /></div>
+      <div class="control submit"><button>Search</button></div>
+    </form>
+    <form id="Facets">
+      <div class="facet hosts">
+        <h3>Hosts</h3>
+        <ol>
+          <li><input type="checkbox"/> ex1.example.com (15,839)</li>
+          <li><input type="checkbox"/> qa.some-other.com (4,402)</li>
+          <li><input type="checkbox"/> ex2.example.com (189)</li>
+          <li><input type="checkbox"/> ex3.example.com (5)</li>
+          <li><input type="checkbox"/> ex4.example.com (0)</li>
+        </ol>
+      </div>
+      <div class="facet senders">
+        <h3>Sender</h3>
+        <ol>
+          <li><input type="checkbox"/> MarkLogic</li>
+          <li><input type="checkbox"/> Node.js</li>
+        </ol>
+      </div>
+      <div class="facet severities">
+        <h3>Severity</h3>
+        <ol>
+          <li><input type="checkbox"/> Critical</li>
+          <li><input type="checkbox"/> Alert</li>
+          <li><input type="checkbox"/> Error</li>
+          <li><input type="checkbox"/> Notice</li>
+          <li><input type="checkbox"/> Info</li>
+          <li><input type="checkbox"/> Debug</li>
+        </ol>
+      </div>
+      <!--<div class="facet date-range">
       
-    </div>-->
-  </form>
-  <table id="Logs">
-    <caption>Logs</caption>
-    <colgroup>
-      <col class="severity"/>
-      <col class="time"/>
-      <col class="diff"/>
-      <col class="sender"/>
-      <col class="host"/>
-      <col class="message"/>
-    </colgroup>
-    <thead>
-      <tr>
-        <th class="severity"></th>
-        <th class="time">Time <div class="key">h:m:s, y-m-d</div></th>
-        <th class="diff">Diff  <div class="key">seconds</th>
-        <th class="sender">Sender</th>
-        <th class="host">Host</th>
-        <th class="message">Message</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+      </div>-->
+    </form>
+  </header>
+  <div id="Body">
+    <table id="Logs">
+      <caption>Logs</caption>
+      <colgroup>
+        <col class="severity"/>
+        <col class="time"/>
+        <col class="diff"/>
+        <col class="sender"/>
+        <col class="host"/>
+        <col class="message"/>
+      </colgroup>
+      <thead>
+        <tr>
+          <th class="severity"></th>
+          <th class="time">Time <div class="key">h:m:s, y-m-d</div></th>
+          <th class="diff">Diff  <div class="key">seconds</th>
+          <th class="sender">Sender</th>
+          <th class="host">Host</th>
+          <th class="message">Message</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+  <footer>footer</footer>
 </body>
 </html>
