--- a/public/sse.html
+++ b/public/sse.html
@@ -244,6 +244,9 @@
 </head>
 <body>
   <header>
+    <h1>Syslog for Humans</h1>
+  </header>
+  <nav>
     <form id="Search">
       <div class="control search"><input type="text" name="q" /></div>
       <div class="control submit"><button>Search</button></div>
@@ -281,8 +284,6 @@
       
       </div>-->
     </form>
-  </header>
-  <div id="Body">
     <table id="Logs">
       <caption>Logs</caption>
       <colgroup>
@@ -303,9 +304,32 @@
           <th class="message">Message</th>
         </tr>
       </thead>
+    </table>
+  </nav>
+  <article>
+    <table id="Logs">
+      <caption>Logs</caption>
+      <colgroup>
+        <col class="severity"/>
+        <col class="time"/>
+        <col class="diff"/>
+        <col class="sender"/>
+        <col class="host"/>
+        <col class="message"/>
+      </colgroup>
+      <!--<thead>
+        <tr>
+          <th class="severity"></th>
+          <th class="time">Time <div class="key">h:m:s, y-m-d</div></th>
+          <th class="diff">Diff  <div class="key">seconds</th>
+          <th class="sender">Sender</th>
+          <th class="host">Host</th>
+          <th class="message">Message</th>
+        </tr>
+      </thead>-->
       <tbody></tbody>
     </table>
-  </div>
-  <footer>footer</footer>
+  </article>
+  <footer><span class="messages-count">Showing … messages</span></footer>
 </body>
 </html>
