Converts severity, host, and sender to pills

--- a/public/sse.html
+++ b/public/sse.html
@@ -93,7 +93,7 @@
         </colgroup>
         <thead>
           <tr>
-            <th class="severity"></th>
+            <th class="severity">!</th>
             <th class="time">Time <div class="key">h:m:s, y-m-d</div></th>
             <th class="diff">Diff  <div class="key">seconds</th>
             <th class="sender">Sender</th>
