Icons for host, severity, and sender

--- a/public/sse.html
+++ b/public/sse.html
@@ -93,12 +93,12 @@
         </colgroup>
         <thead>
           <tr>
-            <th class="severity">!</th>
+            <th class="severity"><span class="icon">&#xe809;</span></th>
             <th class="time">Time <div class="key">h:m:s, y-m-d</div></th>
             <th class="diff">Diff  <div class="key">seconds</th>
-            <th class="sender">Sender</th>
-            <th class="host">Host</th>
-            <th class="message">Message</th>
+            <th class="sender"><span class="icon">&#xe807;</span>Sender</th>
+            <th class="host"><span class="icon">&#xe805;</span>Host</th>
+            <th class="message"><span class="icon">&#xe80a;</span>Message</th>
           </tr>
         </thead>
       </table>
