Updates the title to match the main heading

--- a/public/sse.html
+++ b/public/sse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Log Viewer</title>
+  <title>Syslog for Humans</title>
   <script type="text/javascript" src="lib/number-tolocalestring.js"></script>
   <script type="text/javascript" src="lib/URI.js"></script>
   <script type="text/javascript" src="EventEmitter2.js"></script>
